# gen-ibans

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO_METHODS.md  bootstrap-linux.sh  bootstrap-macos.sh  bootstrap-windows.ps1  mise.toml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
gen_ibans/: __init__.py  __main__.py  cli.py  config_manager.py  downloader.py  iban_generator.py
gen_ibans/methods/: __init__.py  method_00.py  method_01.py  method_02.py  method_03.py  method_04.py  method_05.py  method_06.py  method_07.py  method_08.py  method_09.py  method_10.py  method_11.py  method_12.py  method_13.py  method_14.py  method_15.py  method_16.py  method_17.py  method_18.py  method_19.py  method_20.py  method_21.py  method_22.py  method_23.py  method_24.py  method_25.py  method_26.py  method_27.py  method_28.py  method_29.py  method_30.py  method_31.py  method_32.py  method_33.py  method_34.py  method_35.py  method_36.py  method_37.py  method_38.py  (+111 more)
prompts/: add_info_to_prompts.py  generate_prompts.py
prompts/methods/: prompt_template_common_header.md.j2
tests/: __init__.py  test_birth_date.py  test_business_rules.py  test_business_rules_extended.py  test_cli.py  test_cli_filters.py  test_format_encoding.py  test_iban_generator.py  test_multiple_holders.py  test_new_features.py  test_new_id_system.py  test_person_reusability.py  test_realistic_distribution.py  test_wid.py
tests/methods/: test_method_00.py  test_method_01.py  test_method_02.py  test_method_03.py  test_method_04.py  test_method_05.py  test_method_06.py  test_method_07.py  test_method_08.py  test_method_09.py  test_method_10.py  test_method_11.py  test_method_12_alias_to_02.py  test_method_13.py  test_method_17.py  test_method_24.py  test_method_57.py  test_method_C5.py
